--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@ title: Contact
     <div class="page-content">
         <ul class="page-list"> 
             <li>
-              Twitter:<br />
-              <a href="https://twitter.com/{{site.owner.twitter}}" target="_blank">twitter.com/{{site.owner.twitter}}</a>
+              Facebook:<br />
+              <a href="https://www.facebok.com/profile.php?id={{site.owner.facebook}}" target="_blank">facebook.com/{{site.owner.name}}</a>
             </li>
             <li>
               Github:<br />
-              <a href="https://github.com/{{site.owner.github}}" target="_blank">github.com/{{site.owner.github}}</a>
+              <a href="https://github.com/{{site.owner.github}}" target="_blank">github.com/{{site.owner.name}}</a>
             </li>
         </ul>
     </div>
