--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,16 @@ title: Contact
     <div class="page-content">
         <ul class="page-list"> 
             <li>
+              Github:<br />
+              <a href="https://github.com/{{site.owner.github}}" target="_blank">github.com/{{site.owner.name}}</a>
+            </li>
+            <li>
               Facebook:<br />
               <a href="https://www.facebok.com/profile.php?id={{site.owner.facebook}}" target="_blank">facebook.com/{{site.owner.name}}</a>
             </li>
             <li>
-              Github:<br />
-              <a href="https://github.com/{{site.owner.github}}" target="_blank">github.com/{{site.owner.name}}</a>
+              Linkedin:<br />
+              <a href="https://www.linkedin.com/profile/view?id={{site.owner.linkedin}}" target="_blank">linkedin.com/{{site.owner.name}}</a>
             </li>
         </ul>
     </div>
